--- a/src/Vinogradar/CompaniesBundle/Resources/config/services.yml
+++ b/src/Vinogradar/CompaniesBundle/Resources/config/services.yml
@@ -1,6 +1,10 @@
 services:
     cache:
         class: Doctrine\Common\Cache\XcacheCache
+    vinogradar_companies.tag_provider:
+        class: Vinogradar\CompaniesBundle\Provider\TagProvider
+        arguments: [ @doctrine.orm.entity_manager ]
+
 #    vinogradar_companies.example:
 #        class: Vinogradar\CompaniesBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
