Refactored trasliterator and tags fetching

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+vinogradar_utils:
+    resource: "@VinogradarUtilsBundle/Resources/config/routing.yml"
+    prefix:   /
+
 vinogradar_companies:
     resource: "@VinogradarCompaniesBundle/Resources/config/routing.yml"
     prefix:   /
