--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+vinogradar_news:
+    resource: "@VinogradarNewsBundle/Resources/config/routing.yml"
+    prefix:   /
+
 vinogradar_utils:
     resource: "@VinogradarUtilsBundle/Resources/config/routing.yml"
     prefix:   /
