Started adding /api/tags to return JSON list of tags for javascript to have tags and do search Next step: deal with self-referencing infinity in tags, by implementing serializable interface

--- a/src/Vinogradar/CompaniesBundle/Resources/config/routing.yml
+++ b/src/Vinogradar/CompaniesBundle/Resources/config/routing.yml
@@ -14,3 +14,8 @@ vinogradar_companies_list_by_tag:
     path:     /company/list/{tagNameForUrl}
     defaults: { _controller: VinogradarCompaniesBundle:Company:listByTag}
 
+# api
+vinogradar_companies_get_tags_list:
+    path:   /company/api/tags
+    defaults: { _controller: VinogradarCompaniesBundle:Company:getTagsJson }
+
